io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegalnative/C.java
package io.takamaka.tests.errors.illegalnative;

public class C {
	public native void foo();
}